--- a/1_index.html
+++ b/1_index.html
@@ -11,6 +11,9 @@
         console.log（ "Hello JavaScript!");
         console.log（ "儿童节快乐!");
     </script>
+    <button onclick="alert(" Hello from onclick=")">
+      alert
+    </button>
 </body>
 
 </html>
